# test-rtd-win32-py311-test

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .ruff.toml  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  README.md  REUSE.toml  SECURITY.md  bandit.yaml  hatch.toml  hatch_build.py  pyproject.toml  pyrightconfig.json.license  pytest.ini  tox.ini  uv.lock.license
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md.license  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1_installation_report.yml  2_bug_report.yml  3_docs_report.yml  4_feature_request.yml  5_performance_report.yml  6_devops.yml  7_refacto.yml  8_architecture.yml  config.yml
.github/workflows/: auto_merge.yml  documentation-links.yml  publish_ghcr.yml  release_drafter.yml  semantic_pull_request.yml  tests.yml  upload_artifacts.yml
container/: Containerfile.alpine  Containerfile.containerignore  Containerfile.debian
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  SECURITY.md  artifacts_verification.md  conf.py  contributing_index.md  guide.md  index.md  licensing.md  licensing_faq.md  licensing_index.md  project.md  quickstart.md  readthedocs.js  usage.md
docs/_static/: banner.svg.license
scripts/: build_container_image.py  release.py
src/test_rtd_win32_py311_test/: __init__.py  console.py  debug_info.py  environment.py  loc.py  package_metadata.py  py.typed
src/test_rtd_win32_py311_test/cli/: __init__.py  __main__.py  entrypoint.py  exception.py  logs.py
src/test_rtd_win32_py311_test/cli/command/: __init__.py  hello_world.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  cli_runner.py
tests/test_test_rtd_win32_py311_test/: __init__.py  test_console.py  test_debug_info.py  test_environment.py  test_loc.py  test_package_metadata.py
tests/test_test_rtd_win32_py311_test/test_cli/: __init__.py  test_entrypoint.py  test_exception.py
tests/test_test_rtd_win32_py311_test/test_cli/test_command/: __init__.py  test_hello_world.py
