# SPDX-FileCopyrightText: © 2024 Romain Brault <mail@romainbrault.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme>=24.1",
    "hatch-vcs>=0.4",
    "hatchling>=1.25",
]

[project]
name = "test-rtd-win32-py311-test"
description = "A Python package."
keywords = [
    "Python",
]
license = "MIT OR Apache-2.0"
license-files.paths = [
    "LICENSES/Apache-2.0.txt",
    "LICENSES/CC0-1.0.txt",
    "LICENSES/MIT.txt",
]
maintainers = [
    { name = "Romain Brault", email = "mail@romainbrault.com" },
]
authors = [
    { name = "Romain Brault", email = "mail@romainbrault.com" },
]
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "distro>=1.9",
    "python-dotenv>=1.0.1",
    "rich-click>=1.8.3",
    "typing-extensions>=4.12.2; python_full_version<'3.12'",
]

urls.changelog = "https://github.com/whiteprints-tests/test-rtd-win32-py311-test/releases"
urls.discussions = "https://github.com/whiteprints-tests/test-rtd-win32-py311-test/discussions"
urls.documentation = "https://github.com/whiteprints-tests/test-rtd-win32-py311-test"
urls.download = "https://github.com/whiteprints-tests/test-rtd-win32-py311-test/releases"
urls.homepage = "https://github.com/whiteprints-tests/test-rtd-win32-py311-test"
urls.integration = "https://github.com/whiteprints-tests/test-rtd-win32-py311-test/actions"
urls.issues = "https://github.com/whiteprints-tests/test-rtd-win32-py311-test/issues"
urls.repository = "https://github.com/whiteprints-tests/test-rtd-win32-py311-test"
scripts.test-rtd-win32-py311-test = "test_rtd_win32_py311_test.cli.entrypoint:test_rtd_win32_py311_test"

[tool.pyproject-fmt]
column_width = 79
indent = 4
keep_full_version = false
max_supported_python = "3.13"

[tool.uv]
managed = true
cache-keys = [
    { git = true },
    { file = "pyproject.toml" },
    { file = "hatch.toml" },
    { file = "hatch_build.py" },
]
dev-dependencies = [
    "scalene>=1.5.19",
    "pynvim>=0.4.3",
    "beartype>=0.18.5",
    "hypothesis>=6.110.1",
    "pylint>=3.2.6",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "xdoctest[colors]>=1.2.0",
]
